<?xml version="1.0"?>
<package format="2">
  <name>force_controller_core</name>
  <version>0.0.2</version>
  <description>Force Controller Math</description>

  <maintainer email="luca.lach@pal-robotics.com">llach</maintainer>

  <license>BSD</license>

  <author>Luca Lach</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

</package>
